fix: add lang="zxx"

--- a/travel/index.html
+++ b/travel/index.html
@@ -91,7 +91,7 @@
         <button class="button find"><img class="arrow" src="./assets/img/arrow.svg" alt="arrow">Find More</button>
       </section>
     </div>
-    <div class="fourth-section">
+    <div lang="zxx" class="fourth-section">
       <section class="stories">
         <div class="stories-top">
           <h2 class="section-title stories" id="stories">TRAVEL STORIES</h2>
