fix: changed .png to .jpg

--- a/travel/index.html
+++ b/travel/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel Portal</title>
+  <link rel="icon" href="./assets/img/favicon.ico">
   <link href="http://fonts.cdnfonts.com/css/magra" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,15 +72,15 @@
         <h2 class="section-title" id="destinations">POPULAR DESTINATIONS</h2>
         <div class="carousel">
           <div class="picture">
-            <img class="destination-img" src="./assets/img/spain.png" alt="spain">
+            <img class="destination-img" src="./assets/img/spain.jpg" alt="spain">
             <span class="destination-text">SPAIN</span>
           </div>
           <div class="picture">
-            <img class="destination-img" src="./assets/img/japan.png" alt="japan">
+            <img class="destination-img" src="./assets/img/japan.jpg" alt="japan">
             <span class="destination-text">JAPAN</span>
           </div>
           <div class="picture">
-            <img class="destination-img" src="./assets/img/usa.png" alt="usa">
+            <img class="destination-img" src="./assets/img/usa.jpg" alt="usa">
             <span class="destination-text">USA</span>
           </div>
         </div>
@@ -99,7 +100,7 @@
         <div class="stories-main">
           <div class="stories-body">
             <div class="story">
-              <img class="story-photo" src="./assets/img/rectangle_29.png" alt="utah">
+              <img class="story-photo" src="./assets/img/rectangle_29.jpg" alt="utah">
               <div class="story-description">
                 <h3 class="story-title">10 Photos of Attractive Thailand</h3>
                 <p class="story-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
@@ -107,7 +108,7 @@
               </div>
             </div>
             <div class="story">
-              <img class="story-photo" src="./assets/img/rectangle_30.png" alt="utah">
+              <img class="story-photo" src="./assets/img/rectangle_30.jpg" alt="utah">
               <div class="story-description">
                 <h3 class="story-title">Canyonlands National Park, Utah</h3>
                 <p class="story-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
@@ -115,7 +116,7 @@
               </div>
             </div>
             <div class="story">
-              <img class="story-photo" src="./assets/img/rectangle_31.png" alt="utah">
+              <img class="story-photo" src="./assets/img/rectangle_31.jpg" alt="utah">
               <div class="story-description">
                 <h3 class="story-title">I left my heart in the Mountains!</h3>
                 <p class="story-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
@@ -123,7 +124,7 @@
               </div>
             </div>
             <div class="story">
-              <img class="story-photo" src="./assets/img/rectangle_32.png" alt="utah">
+              <img class="story-photo" src="./assets/img/rectangle_32.jpg" alt="utah">
               <div class="story-description">
                 <h3 class="story-title">The Longest journey in my life!</h3>
                 <p class="story-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
