--- a/travel/index.html
+++ b/travel/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1440px, initial-scale=1.0">
   <title>Travel Portal</title>
   <link rel="icon" href="./assets/img/favicon.ico">
   <link href="http://fonts.cdnfonts.com/css/magra" rel="stylesheet">
