feat: added :hover to many elements

--- a/travel/index.html
+++ b/travel/index.html
@@ -83,7 +83,7 @@
           <div class="round center"></div>
           <div class="round"></div>
         </div>
-        <button class="button find"><img class="arrow" src="./assets/img/arrow.svg" alt="arrow">Find More</button>
+        <button class="button find"><img class="arrow" src="./assets/img/arrow.svg" alt="arrow"><img class="arrow" src="./assets/img/arrow-g.svg" alt="arrow">Find More</button>
       </section>
     </div>
     <div lang="zxx" class="fourth-section">
@@ -126,21 +126,21 @@
               </div>
             </div>
           </div>
-          <button class="button see"><img class="arrow" src="./assets/img/arrow.svg" alt="arrow">See More</button>
+          <button class="button see"><img class="arrow" src="./assets/img/arrow.svg" alt="arrow"><img class="arrow" src="./assets/img/arrow-g.svg" alt="arrow">See More</button>
         </div>
       </section>
     </div>
   </main>
   <footer class="footer">
     <div class="rs-school">
-      <a href="https://rs.school/js-stage0/" target="_blank"><img class="git-logo" src="./assets/img/rs_school.svg" alt="rs-school-logo"></a>
-      <a href="https://github.com/vladyka-nazarii/" target="_blank"><img class="git-logo" src="./assets/img/github.svg" alt="github-logo"></a>
+      <a class="footer-logo" href="https://rs.school/js-stage0/" target="_blank"><img class="git-logo" src="./assets/img/rs_school.svg" alt="rs-school-logo"><img class="git-logo" src="./assets/img/rs_school-b.svg" alt="rs-school-logo"></a>
+      <a class="footer-logo" href="https://github.com/vladyka-nazarii/" target="_blank"><img class="git-logo" src="./assets/img/github.svg" alt="github-logo"><img class="git-logo" src="./assets/img/github-b.svg" alt="github-logo"></a>
     </div>
     <span class="footer-text">All Rights Reserved © Travel Portal</span>
     <ul class="social">
-      <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram-logo" src="./assets/img/instagram.svg" alt="instagram-logo"></a></li>
-      <li><a href="https://www.youtube.com/" target="_blank"><img class="youtube-logo" src="./assets/img/yotube.svg" alt="youtube-logo"></a></li>
-      <li><a href="https://twitter.com/" target="_blank"><img class="twitter-logo" src="./assets/img/twitter.svg" alt="twitter-logo"></a></li>
+      <li><a class="footer-logo" href="https://www.instagram.com/" target="_blank"><img class="instagram-logo" src="./assets/img/instagram.svg" alt="instagram-logo"><img class="instagram-logo" src="./assets/img/instagram-b.svg" alt="instagram-logo"></a></li>
+      <li><a class="footer-logo" href="https://www.youtube.com/" target="_blank"><img class="youtube-logo" src="./assets/img/yotube.svg" alt="youtube-logo"><img class="youtube-logo" src="./assets/img/yotube-b.svg" alt="youtube-logo"></a></li>
+      <li><a class="footer-logo" href="https://twitter.com/" target="_blank"><img class="twitter-logo" src="./assets/img/twitter.svg" alt="twitter-logo"><img class="twitter-logo" src="./assets/img/twitter-b.svg" alt="twitter-logo"></a></li>
     </ul>
   </footer>
 </body>
