feat: added index.js

--- a/travel/index.html
+++ b/travel/index.html
@@ -7,6 +7,7 @@
   <title>Travel Portal</title>
   <link rel="icon" href="./assets/img/favicon.ico">              
   <link rel="stylesheet" href="./style.css">
+  <script src="index.js"></script>
 </head>
 <body class="body">
   <header class="header">
@@ -138,9 +139,9 @@
     </div>
     <span class="footer-text">All Rights Reserved © Travel Portal</span>
     <ul class="social">
-      <li><a class="footer-logo" href="https://www.instagram.com/" target="_blank"><img class="instagram-logo" src="./assets/img/instagram.svg" alt="instagram-logo"><img class="instagram-logo" src="./assets/img/instagram-b.svg" alt="instagram-logo"></a></li>
-      <li><a class="footer-logo" href="https://www.youtube.com/" target="_blank"><img class="youtube-logo" src="./assets/img/yotube.svg" alt="youtube-logo"><img class="youtube-logo" src="./assets/img/yotube-b.svg" alt="youtube-logo"></a></li>
-      <li><a class="footer-logo" href="https://twitter.com/" target="_blank"><img class="twitter-logo" src="./assets/img/twitter.svg" alt="twitter-logo"><img class="twitter-logo" src="./assets/img/twitter-b.svg" alt="twitter-logo"></a></li>
+      <li><a class="footer-logo" href="https://rs.school/js-stage0/" target="_blank"><img class="instagram-logo" src="./assets/img/instagram.svg" alt="instagram-logo"><img class="instagram-logo" src="./assets/img/instagram-b.svg" alt="instagram-logo"></a></li>
+      <li><a class="footer-logo" href="https://github.com/vladyka-nazarii/" target="_blank"><img class="youtube-logo" src="./assets/img/yotube.svg" alt="youtube-logo"><img class="youtube-logo" src="./assets/img/yotube-b.svg" alt="youtube-logo"></a></li>
+      <li><a class="footer-logo" href="https://github.com/vladyka-nazarii/" target="_blank"><img class="twitter-logo" src="./assets/img/twitter.svg" alt="twitter-logo"><img class="twitter-logo" src="./assets/img/twitter-b.svg" alt="twitter-logo"></a></li>
     </ul>
   </footer>
 </body>
