--- a/travel/index.html
+++ b/travel/index.html
@@ -7,7 +7,6 @@
   <title>Travel Portal</title>
   <link rel="icon" href="./assets/img/favicon.ico">              
   <link rel="stylesheet" href="./style.css">
-  <script src="index.js"></script>
 </head>
 <body class="body">
   <header class="header">
@@ -18,14 +17,21 @@
         </svg></a>
         <a class="index-link" href="./index.html"><span class="logo-text">Travel Portal</span></a>
       </div>
-      <nav class="nav">
-        <ul class="nav-list">
-          <li><a href="#preview" class="nav-link">How It Works</a></li>
-          <li><a href="#steps" class="nav-link">Plan Your Trip</a></li>
-          <li><a href="#destinations" class="nav-link">Destinations</a></li>
-          <li><a href="#stories" class="nav-link">Travel Stories</a></li>
-        </ul>
-      </nav>
+      <div class="menu">
+        <svg class="burger-close" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path class="burger-close-path" d="M16.1751 15L22.2501 8.925C22.3866 8.76559 22.4579 8.56052 22.4498 8.35079C22.4417 8.14106 22.3548 7.94211 22.2064 7.7937C22.058 7.64529 21.859 7.55835 21.6493 7.55024C21.4395 7.54214 21.2345 7.61348 21.0751 7.75L15.0001 13.825L8.92506 7.74167C8.76564 7.60515 8.56058 7.53381 8.35085 7.54191C8.14112 7.55001 7.94217 7.63696 7.79376 7.78537C7.64534 7.93378 7.5584 8.13273 7.5503 8.34246C7.5422 8.55219 7.61354 8.75725 7.75006 8.91667L13.8251 15L7.74173 21.075C7.65449 21.1497 7.58364 21.2416 7.53362 21.345C7.4836 21.4484 7.45549 21.561 7.45106 21.6758C7.44663 21.7906 7.46597 21.905 7.50786 22.0119C7.54976 22.1189 7.61331 22.216 7.69452 22.2972C7.77573 22.3784 7.87285 22.442 7.97979 22.4839C8.08673 22.5258 8.20117 22.5451 8.31594 22.5407C8.4307 22.5362 8.54331 22.5081 8.6467 22.4581C8.75009 22.4081 8.84202 22.3372 8.91673 22.25L15.0001 16.175L21.0751 22.25C21.2345 22.3865 21.4395 22.4579 21.6493 22.4498C21.859 22.4417 22.058 22.3547 22.2064 22.2063C22.3548 22.0579 22.4417 21.8589 22.4498 21.6492C22.4579 21.4395 22.3866 21.2344 22.2501 21.075L16.1751 15Z" fill="white" fill-opacity="0.7"/>
+        </svg>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li><a href="#preview" class="nav-link">How It Works</a></li>
+            <li><a href="#steps" class="nav-link">Plan Your Trip</a></li>
+            <li><a href="#destinations" class="nav-link">Destinations</a></li>
+            <li><a href="#stories" class="nav-link">Travel Stories</a></li>
+            <li><a href="#" class="nav-link hide">Account</a></li>
+            <li><a href="#social" class="nav-link hide">Social Media</a></li>
+          </ul>
+        </nav>
+      </div>
       <button class="button-login">Login</button>
       <svg class="burger" width="35" height="32" viewBox="0 0 35 32" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path class="burger-path" d="M29.2396 14.6667H5.76042C4.99527 14.6667 4.375 15.2338 4.375 15.9333V16.0667C4.375 16.7662 4.99527 17.3333 5.76042 17.3333H29.2396C30.0047 17.3333 30.625 16.7662 30.625 16.0667V15.9333C30.625 15.2338 30.0047 14.6667 29.2396 14.6667Z" fill="white"/>
@@ -172,8 +178,9 @@
         </div>
       </section>
     </div>
+    <div class="overlay"></div>
   </main>
-  <footer class="footer">
+  <footer class="footer" id="social">
     <div class="rs-school">
       <a class="footer-logo" href="https://rs.school/js-stage0/" target="_blank">
         <svg class="rs-school-logo" height="45px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 552.8 205.3"><style>.st0{fill:#fff}.st1{clip-path:url(#SVGID_2_)}.st2{clip-path:url(#SVGID_4_)}.st3{clip-path:url(#SVGID_6_)}.st4{clip-path:url(#SVGID_8_)}.st5{fill:#fff;stroke:#000;stroke-width:4;stroke-miterlimit:10}.st6{clip-path:url(#SVGID_8_)}.st6,.st7{fill:none;stroke:#000;stroke-width:4;stroke-miterlimit:10}.st8,.st9{clip-path:url(#SVGID_10_)}.st9{fill:none;stroke:#000;stroke-width:4;stroke-miterlimit:10}</style><title>rs_school_js</title>
@@ -219,4 +226,5 @@
     </ul>
   </footer>
 </body>
+<script src="index.js"></script>
 </html>
