--- a/travel/index.html
+++ b/travel/index.html
@@ -27,7 +27,7 @@
             <li><a href="#steps" class="nav-link">Plan Your Trip</a></li>
             <li><a href="#destinations" class="nav-link">Destinations</a></li>
             <li><a href="#stories" class="nav-link">Travel Stories</a></li>
-            <li><a href="#" class="nav-link hide">Account</a></li>
+            <li><a href="#" class="nav-link nav-login hide">Account</a></li>
             <li><a href="#social" class="nav-link hide">Social Media</a></li>
           </ul>
         </nav>
@@ -95,40 +95,30 @@
             <div class="center-click"></div>
             <div class="right-click"></div>
           </div>
-          <div class="picture japan2">
-            <img class="destination-img" src="./assets/img/japan.jpg" alt="japan">
-            <img class="destination-img" src="./assets/img/japan-390.jpg" alt="japan">
-            <span class="destination-text">JAPAN</span>
-          </div>
-          <div class="picture usa2">
+          <div class="picture">
             <img class="destination-img" src="./assets/img/usa.jpg" alt="usa">
             <img class="destination-img" src="./assets/img/usa-390.jpg" alt="usa">
             <span class="destination-text">USA</span>
           </div>
-          <div class="picture spain">
+          <div class="picture">
             <img class="destination-img" src="./assets/img/spain.jpg" alt="spain">
             <img class="destination-img" src="./assets/img/spain-390.jpg" alt="spain">
             <span class="destination-text">SPAIN</span>
           </div>
-          <div class="picture japan">
+          <div class="picture">
             <img class="destination-img" src="./assets/img/japan.jpg" alt="japan">
             <img class="destination-img" src="./assets/img/japan-390.jpg" alt="japan">
             <span class="destination-text">JAPAN</span>
           </div>
-          <div class="picture usa">
+          <div class="picture">
             <img class="destination-img" src="./assets/img/usa.jpg" alt="usa">
             <img class="destination-img" src="./assets/img/usa-390.jpg" alt="usa">
             <span class="destination-text">USA</span>
           </div>
-          <div class="picture spain2">
+          <div class="picture">
             <img class="destination-img" src="./assets/img/spain.jpg" alt="spain">
             <img class="destination-img" src="./assets/img/spain-390.jpg" alt="spain">
             <span class="destination-text">SPAIN</span>
-          </div>
-          <div class="picture japan3">
-            <img class="destination-img" src="./assets/img/japan.jpg" alt="japan">
-            <img class="destination-img" src="./assets/img/japan-390.jpg" alt="japan">
-            <span class="destination-text">JAPAN</span>
           </div>
         </div>
         <div class="arrows">
@@ -203,7 +193,33 @@
         </div>
       </section>
     </div>
-    <div class="overlay"></div>
+    <div class="overlay">
+    </div>
+    <div class="pop-up">
+      <div class="pop-up__wrapper">
+        <p class="pop-up__title-text">Log in to your account</p>
+        <button class="pop-up__button facebook"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="24" height="24" transform="translate(0.5)" fill="#1877F2"/>
+          <path d="M24 12.0699C24 5.71857 18.8513 0.569853 12.5 0.569853C6.14872 0.569853 1 5.71857 1 12.0699C1 17.8098 5.20538 22.5674 10.7031 23.4301V15.3941H7.7832V12.0699H10.7031V9.53626C10.7031 6.65407 12.42 5.06204 15.0468 5.06204C16.305 5.06204 17.6211 5.28665 17.6211 5.28665V8.11673H16.171C14.7424 8.11673 14.2969 9.00319 14.2969 9.91264V12.0699H17.4863L16.9765 15.3941H14.2969V23.4301C19.7946 22.5674 24 17.8098 24 12.0699Z" fill="white"/>
+          </svg>Sign In with Facebook</button>
+        <button class="pop-up__button google"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="24" height="24" transform="translate(0.5)" fill="white"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M23.54 12.2614C23.54 11.4459 23.4668 10.6618 23.3309 9.90909H12.5V14.3575H18.6891C18.4225 15.795 17.6123 17.013 16.3943 17.8284V20.7139H20.1109C22.2855 18.7118 23.54 15.7636 23.54 12.2614Z" fill="#4285F4"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5 23.4998C15.605 23.4998 18.2081 22.4701 20.1109 20.7137L16.3943 17.8282C15.3645 18.5182 14.0472 18.926 12.5 18.926C9.50474 18.926 6.96951 16.903 6.06519 14.1848H2.22314V17.1644C4.11542 20.9228 8.00451 23.4998 12.5 23.4998Z" fill="#34A853"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M6.06523 14.1851C5.83523 13.4951 5.70455 12.758 5.70455 12.0001C5.70455 11.2421 5.83523 10.5051 6.06523 9.81506V6.83552H2.22318C1.44432 8.38802 1 10.1444 1 12.0001C1 13.8557 1.44432 15.6121 2.22318 17.1646L6.06523 14.1851Z" fill="#FBBC05"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5 5.07386C14.1884 5.07386 15.7043 5.65409 16.8961 6.79364L20.1945 3.49523C18.2029 1.63955 15.5997 0.5 12.5 0.5C8.00451 0.5 4.11542 3.07705 2.22314 6.83545L6.06519 9.815C6.96951 7.09682 9.50474 5.07386 12.5 5.07386Z" fill="#EA4335"/>
+          </svg>Sign In with Google</button>
+        <div class="or"><div class="or-line"></div><p class="or-text">or</p><div class="or-line"></div></div>
+        <p class="pop-up__left-text">E-mail</p>
+        <input class="pop-up__input" type="email" name="" id="">
+        <p class="pop-up__left-text">Password</p>
+        <input class="pop-up__input" type="password" name="" id="">
+        <button class="pop-up__button sign">Sign In</button>
+        <p class="forgot">Forgot Your Password?</p>
+        <div class="bottom-line"></div>
+        <p class="bottom-text">Don’t have an account? <span class="last-text-register">Register</span></p>
+      </div>
+    </div>
   </main>
   <footer class="footer" id="social">
     <div class="rs-school">
@@ -250,6 +266,6 @@
       </li>
     </ul>
   </footer>
+  <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
 </html>
