feat: add alert to pop-up

--- a/travel/index.html
+++ b/travel/index.html
@@ -211,10 +211,10 @@
           </svg>Sign In with Google</button>
         <div class="or"><div class="or-line"></div><p class="or-text">or</p><div class="or-line"></div></div>
         <p class="pop-up__left-text">E-mail</p>
-        <input class="pop-up__input" type="email" name="" id="">
+        <input class="pop-up__input" type="email" name="" id="email">
         <p class="pop-up__left-text">Password</p>
-        <input class="pop-up__input" type="password" name="" id="">
-        <button class="pop-up__button sign">Sign In</button>
+        <input class="pop-up__input" type="password" name="" id="password">
+        <button class="pop-up__button sign" type="submit">Sign In</button>
         <p class="forgot">Forgot Your Password?</p>
         <div class="bottom-line"></div>
         <p class="bottom-text">Don’t have an account? <span class="last-text-register">Register</span></p>
