--- a/travel/index.html
+++ b/travel/index.html
@@ -193,8 +193,7 @@
         </div>
       </section>
     </div>
-    <div class="overlay">
-    </div>
+    <div class="overlay"></div>
     <div class="pop-up">
       <div class="pop-up__wrapper">
         <p class="pop-up__title-text">Log in to your account</p>
