add: advanced player

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -11,12 +11,74 @@
 <body>
   <header class="header">
     <div class="player">
-      <div class="player-controls">
-        <button class="play-prev player-icon"></button>
-        <button class="play player-icon"></button>
-        <button class="play-next player-icon"></button>
+      <div class="cover-component">
+        <div class="big-cover-container">
+          <img class="big-cover-image" src="" alt="big cover">
+        </div>
+        <div class="cover-info">
+          <div class="cover-title"></div>
+          <div class="cover-author"></div>
+        </div>
+        <div class="progress-bar-component">
+        </div>
+        <div class="player-controls">
+          <div class="main-controls">
+            <div class="play-controls">
+              <div class="prev-button controls-button">
+                <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="Prev__Icon-sc-1di3ylj-1 cCMEhb">
+                  <path d="M11.253 17.84l-6.955-5.248a.736.736 0 0 1 0-1.184l6.955-5.249c.507-.383 1.247-.032 1.247.592V17.25c0 .624-.74.975-1.247.592zm8.5 0l-6.955-5.248a.736.736 0 0 1 0-1.184l6.955-5.249C20.26 5.776 21 6.127 21 6.751V17.25c0 .624-.74.975-1.247.592z"></path>
+                </svg>
+              </div>
+              <div class="play-button controls-button">
+                <svg viewBox="0 0 36 36" fill="rgb(255, 255, 255)" class="play-icon">
+                  <path d="M12.233 7.68l15.75 10.124c.69.443.69 1.45 0 1.892L12.233 29.82a1.125 1.125 0 0 1-1.733-.947V8.627c0-.89.985-1.428 1.733-.947z"></path>
+                </svg>
+                <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="pause-icon">
+                  <path d="M10 3a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4zm8 0a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4z"></path>
+                </svg>
+              </div>
+              <div class="next-button controls-button">
+                <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="next-icon">
+                  <path d="M12.747 17.84l6.955-5.248a.736.736 0 0 0 0-1.184L12.747 6.16c-.507-.383-1.247-.032-1.247.592V17.25c0 .624.74.975 1.247.592zm-8.5 0l6.955-5.248a.736.736 0 0 0 0-1.184L4.247 6.16C3.74 5.776 3 6.127 3 6.751V17.25c0 .624.74.975 1.247.592z"></path>
+                </svg>
+              </div>
+            </div>
+            <div class="volume-control">
+              <div class="volume-button controls-button">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="rgb(255, 255, 255)">
+                  <path d="M63.4,71.6c-1.2,0-2.3-0.6-2.9-1.7c-0.9-1.6-0.4-3.7,1.2-4.6c5.5-3.2,8.9-9.1,8.9-15.4s-3.4-12.2-8.9-15.4 c-1.6-0.9-2.2-3-1.2-4.6c0.9-1.6,3-2.2,4.6-1.2c7.5,4.4,12.2,12.5,12.2,21.2s-4.7,16.8-12.2,21.2C64.6,71.5,64,71.6,63.4,71.6z" style="opacity: 1;"></path>
+                  <path d="M57.1,60.7c-1.2,0-2.3-0.6-2.9-1.7c-0.9-1.6-0.4-3.7,1.2-4.6C57,53.5,58,51.8,58,50s-1-3.5-2.6-4.4 c-1.6-0.9-2.2-3-1.2-4.6c0.9-1.6,3-2.2,4.6-1.2c3.6,2.1,5.9,6,5.9,10.2s-2.3,8.1-5.9,10.2C58.2,60.5,57.7,60.7,57.1,60.7z" style="opacity: 1;"></path>
+                  <polygon points="85,40 80,35 70,45 60,35 55,40 65,50 55,60 60,65 70,55 80,65 85,60 75,50 " style="opacity: 0;"></polygon>
+                  <path d="M44.2,24.3L28.7,36.6l-0.3,0.3H11.9c-1.1,0-1.9,0.9-1.9,1.9v22.3c0,1.1,0.9,1.9,1.9,1.9h16.4l0.3,0.3l15.5,12.4 c1.3,1,3.1,0.1,3.1-1.5V25.8C47.3,24.2,45.5,23.3,44.2,24.3z"></path>
+                </svg>
+              </div>
+              <div class="volume-slider">
+                <div class="volume-percentage"></div>
+              </div>
+            </div>
+          </div>
+          <div class="second-controls">
+            <div class="shuffle-button controls-button" title="Shuffle">
+              <svg viewBox="0 0 24 24" fill="rgba(255, 255, 255, 0.5)" class="Shuffle__Icon-sc-1ob01n-1 bwMXcK">
+                <path d="M17.643 5.157l.07.063 2.072 2.122.05.059.027.034.028.042.041.078.032.082.026.105.008.067.003.076-.005.079-.014.081-.018.063-.032.083-.017.036-.024.042-.032.048-.019.025-.054.061-2.073 2.123a.721.721 0 0 1-1.036 0 .764.764 0 0 1-.061-.99l.06-.071.822-.842h-2.199L12 12l3.298 3.376h2.2l-.822-.84a.763.763 0 0 1 0-1.062.721.721 0 0 1 1.036 0l2.073 2.123a.75.75 0 0 1 .06.067l-.06-.067c.029.029.055.06.077.092l.028.042.041.079.032.082.026.104.01.087-.001.103-.01.072-.025.104-.032.083-.041.078-.05.074-.055.06-2.073 2.123a.721.721 0 0 1-1.036 0 .763.763 0 0 1 0-1.061l.821-.842h-2.376l-.064-.002a.722.722 0 0 1-.58-.217l-3.514-3.597-3.513 3.597a.727.727 0 0 1-.422.213l-.096.007H4.733a.742.742 0 0 1-.733-.75c0-.386.283-.703.648-.746l.085-.005h1.895L9.926 12 6.628 8.623H4.733A.742.742 0 0 1 4 7.873c0-.415.328-.75.733-.75h2.199c.194 0 .38.078.518.22l3.513 3.596 3.514-3.597.066-.06.066-.047.076-.042.058-.025.054-.018.085-.019.089-.008h2.526l-.821-.842a.763.763 0 0 1 0-1.061.72.72 0 0 1 .967-.063z"></path>
+              </svg>
+            </div>
+            <div class="repeat-button controls-button" title="No Repeat">
+              <svg viewBox="0 0 24 24" fill="rgba(255, 255, 255, 0.5)" class="Loop__Icon-sc-1tk13b1-1 cKmPRk">
+                <path d="M16.25 11.75a.75.75 0 0 1 .745.663L17 12.5V14a3.75 3.75 0 0 1-3.587 3.747l-.163.003H6.56l.97.97a.75.75 0 0 1-.99 1.123l-.07-.063-2.25-2.25a.756.756 0 0 1-.073-.084l-.056-.087-.046-.103-.018-.057-.019-.088-.005-.044L4 16.986l.003-.053.012-.084.022-.083.033-.083.04-.074.022-.034.025-.035.063-.07 2.25-2.25a.75.75 0 0 1 1.123.99l-.063.07-.97.97h6.69a2.25 2.25 0 0 0 2.246-2.118L15.5 14v-1.5a.75.75 0 0 1 .75-.75zm-1.79-6.593l.07.063 2.25 2.25.031.033.042.05.053.084.024.046.025.06.018.058.019.088.006.066v.09l-.003.043-.016.087-.024.081-.025.061-.04.074-.037.055-.035.043-.038.041-2.25 2.25a.75.75 0 0 1-1.123-.99l.063-.07.969-.97H7.75a2.25 2.25 0 0 0-2.246 2.118L5.5 11v1.5a.75.75 0 0 1-1.495.087L4 12.5V11a3.75 3.75 0 0 1 3.587-3.747l.163-.003h6.689l-.97-.97a.75.75 0 0 1-.062-.99l.063-.07a.75.75 0 0 1 .99-.063z"></path>
+              </svg>
+            </div>
+            <div class="playlist-button controls-button" title="Playlist">
+              <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="PlaylistButton__Icon-sc-13w9d8z-1 eNkkcL">
+                <path d="M4.75 16.429c.414 0 .75.351.75.785 0 .434-.336.786-.75.786S4 17.648 4 17.214c0-.434.336-.785.75-.785zm13.5 0c.414 0 .75.351.75.785 0 .434-.336.786-.75.786H8.5c-.414 0-.75-.352-.75-.786 0-.434.336-.785.75-.785zm-13.5-4.715c.414 0 .75.352.75.786 0 .434-.336.786-.75.786S4 12.934 4 12.5c0-.434.336-.786.75-.786zm3.75 0h9.75c.414 0 .75.352.75.786a.775.775 0 0 1-.648.779l-.102.007H8.5c-.414 0-.75-.352-.75-.786 0-.398.282-.727.648-.779l.102-.007h9.75zM18.25 7c.414 0 .75.352.75.786a.775.775 0 0 1-.648.778l-.102.007H8.5c-.414 0-.75-.351-.75-.785 0-.398.282-.727.648-.779L8.5 7h9.75zM4.75 7c.414 0 .75.352.75.786 0 .434-.336.785-.75.785S4 8.22 4 7.786C4 7.352 4.336 7 4.75 7z"></path>
+              </svg>
+            </div>
+          </div>
+        </div>
       </div>
-      <ul class="play-list"></ul>
+      <div class="playlist-component">
+        <div class="playlist-container"></div>
+      </div>
     </div>
     <div class="weather">
       <input type="text" class="city" placeholder="[Enter city]"/>
