--- a/momentum/index.html
+++ b/momentum/index.html
@@ -31,12 +31,12 @@
         <div class="player-controls">
           <div class="main-controls">
             <div class="play-controls">
-              <div class="prev-button controls-button">
+              <div class="prev-button controls-button" title="Previous track">
                 <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="Prev__Icon-sc-1di3ylj-1 cCMEhb">
                   <path d="M11.253 17.84l-6.955-5.248a.736.736 0 0 1 0-1.184l6.955-5.249c.507-.383 1.247-.032 1.247.592V17.25c0 .624-.74.975-1.247.592zm8.5 0l-6.955-5.248a.736.736 0 0 1 0-1.184l6.955-5.249C20.26 5.776 21 6.127 21 6.751V17.25c0 .624-.74.975-1.247.592z"></path>
                 </svg>
               </div>
-              <div class="play-button controls-button">
+              <div class="play-button controls-button" title="Play">
                 <svg viewBox="0 0 36 36" fill="rgb(255, 255, 255)" class="play-icon">
                   <path d="M12.233 7.68l15.75 10.124c.69.443.69 1.45 0 1.892L12.233 29.82a1.125 1.125 0 0 1-1.733-.947V8.627c0-.89.985-1.428 1.733-.947z"></path>
                 </svg>
@@ -44,14 +44,14 @@
                   <path d="M10 3a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4zm8 0a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4z"></path>
                 </svg>
               </div>
-              <div class="next-button controls-button">
+              <div class="next-button controls-button" title="Next track">
                 <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="next-icon">
                   <path d="M12.747 17.84l6.955-5.248a.736.736 0 0 0 0-1.184L12.747 6.16c-.507-.383-1.247-.032-1.247.592V17.25c0 .624.74.975 1.247.592zm-8.5 0l6.955-5.248a.736.736 0 0 0 0-1.184L4.247 6.16C3.74 5.776 3 6.127 3 6.751V17.25c0 .624.74.975 1.247.592z"></path>
                 </svg>
               </div>
             </div>
             <div class="volume-control">
-              <div class="volume-button controls-button">
+              <div class="volume-button controls-button" title="Mute">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="rgb(255, 255, 255)">
                   <path class="full-volume" d="M63.4,71.6c-1.2,0-2.3-0.6-2.9-1.7c-0.9-1.6-0.4-3.7,1.2-4.6c5.5-3.2,8.9-9.1,8.9-15.4s-3.4-12.2-8.9-15.4 c-1.6-0.9-2.2-3-1.2-4.6c0.9-1.6,3-2.2,4.6-1.2c7.5,4.4,12.2,12.5,12.2,21.2s-4.7,16.8-12.2,21.2C64.6,71.5,64,71.6,63.4,71.6z"></path>
                   <path class="half-volume" d="M57.1,60.7c-1.2,0-2.3-0.6-2.9-1.7c-0.9-1.6-0.4-3.7,1.2-4.6C57,53.5,58,51.8,58,50s-1-3.5-2.6-4.4 c-1.6-0.9-2.2-3-1.2-4.6c0.9-1.6,3-2.2,4.6-1.2c3.6,2.1,5.9,6,5.9,10.2s-2.3,8.1-5.9,10.2C58.2,60.5,57.7,60.7,57.1,60.7z"></path>
@@ -71,8 +71,9 @@
               </svg>
             </div>
             <div class="repeat-button controls-button" title="No Repeat">
-              <svg viewBox="0 0 24 24" fill="rgba(255, 255, 255, 0.5)" class="Loop__Icon-sc-1tk13b1-1 cKmPRk">
-                <path d="M16.25 11.75a.75.75 0 0 1 .745.663L17 12.5V14a3.75 3.75 0 0 1-3.587 3.747l-.163.003H6.56l.97.97a.75.75 0 0 1-.99 1.123l-.07-.063-2.25-2.25a.756.756 0 0 1-.073-.084l-.056-.087-.046-.103-.018-.057-.019-.088-.005-.044L4 16.986l.003-.053.012-.084.022-.083.033-.083.04-.074.022-.034.025-.035.063-.07 2.25-2.25a.75.75 0 0 1 1.123.99l-.063.07-.97.97h6.69a2.25 2.25 0 0 0 2.246-2.118L15.5 14v-1.5a.75.75 0 0 1 .75-.75zm-1.79-6.593l.07.063 2.25 2.25.031.033.042.05.053.084.024.046.025.06.018.058.019.088.006.066v.09l-.003.043-.016.087-.024.081-.025.061-.04.074-.037.055-.035.043-.038.041-2.25 2.25a.75.75 0 0 1-1.123-.99l.063-.07.969-.97H7.75a2.25 2.25 0 0 0-2.246 2.118L5.5 11v1.5a.75.75 0 0 1-1.495.087L4 12.5V11a3.75 3.75 0 0 1 3.587-3.747l.163-.003h6.689l-.97-.97a.75.75 0 0 1-.062-.99l.063-.07a.75.75 0 0 1 .99-.063z"></path>
+              <svg viewBox="0 0 24 24" class="repeat-svg">
+                <path class="repeat-icon" d="M16.25 11.75a.75.75 0 0 1 .745.663L17 12.5V14a3.75 3.75 0 0 1-3.587 3.747l-.163.003H6.56l.97.97a.75.75 0 0 1-.99 1.123l-.07-.063-2.25-2.25a.756.756 0 0 1-.073-.084l-.056-.087-.046-.103-.018-.057-.019-.088-.005-.044L4 16.986l.003-.053.012-.084.022-.083.033-.083.04-.074.022-.034.025-.035.063-.07 2.25-2.25a.75.75 0 0 1 1.123.99l-.063.07-.97.97h6.69a2.25 2.25 0 0 0 2.246-2.118L15.5 14v-1.5a.75.75 0 0 1 .75-.75zm-1.79-6.593l.07.063 2.25 2.25.031.033.042.05.053.084.024.046.025.06.018.058.019.088.006.066v.09l-.003.043-.016.087-.024.081-.025.061-.04.074-.037.055-.035.043-.038.041-2.25 2.25a.75.75 0 0 1-1.123-.99l.063-.07.969-.97H7.75a2.25 2.25 0 0 0-2.246 2.118L5.5 11v1.5a.75.75 0 0 1-1.495.087L4 12.5V11a3.75 3.75 0 0 1 3.587-3.747l.163-.003h6.689l-.97-.97a.75.75 0 0 1-.062-.99l.063-.07a.75.75 0 0 1 .99-.063z"></path>
+                <path class="repeat-one-icon" d="M16.25 11.75a.75.75 0 0 1 .745.663L17 12.5V14a3.75 3.75 0 0 1-3.587 3.747l-.163.003H6.56l.97.97a.75.75 0 0 1-.99 1.123l-.07-.063-2.25-2.25a.756.756 0 0 1-.073-.084l-.056-.087-.046-.103-.018-.057-.019-.088-.005-.044L4 16.986l.003-.053.012-.084.022-.083.033-.083.04-.074.022-.034.025-.035.063-.07 2.25-2.25a.75.75 0 0 1 1.123.99l-.063.07-.97.97h6.69a2.25 2.25 0 0 0 2.246-2.118L15.5 14v-1.5a.75.75 0 0 1 .75-.75zm3.896-2.603a.5.5 0 0 1 .854.354v5.086a.5.5 0 0 1-1 0v-3.879l-.146.147a.5.5 0 0 1-.708-.708zm-5.686-3.99l.07.063 2.25 2.25.031.033.042.05.053.084.024.046.025.06.018.058.019.088.006.066v.09l-.003.043-.016.087-.024.081-.025.061-.04.074-.037.055-.035.043-.038.041-2.25 2.25a.75.75 0 0 1-1.123-.99l.063-.07.969-.97H7.75a2.25 2.25 0 0 0-2.246 2.118L5.5 11v1.5a.75.75 0 0 1-1.495.087L4 12.5V11a3.75 3.75 0 0 1 3.587-3.747l.163-.003h6.689l-.97-.97a.75.75 0 0 1-.062-.99l.063-.07a.75.75 0 0 1 .99-.063z"></path>
               </svg>
             </div>
             <div class="playlist-button controls-button" title="Playlist">
