--- a/momentum/index.html
+++ b/momentum/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="second-controls">
             <div class="shuffle-button controls-button" title="Shuffle">
-              <svg viewBox="0 0 24 24" fill="rgba(255, 255, 255, 0.5)" class="Shuffle__Icon-sc-1ob01n-1 bwMXcK">
+              <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255, 0.5)" class="shuffle-svg">
                 <path d="M17.643 5.157l.07.063 2.072 2.122.05.059.027.034.028.042.041.078.032.082.026.105.008.067.003.076-.005.079-.014.081-.018.063-.032.083-.017.036-.024.042-.032.048-.019.025-.054.061-2.073 2.123a.721.721 0 0 1-1.036 0 .764.764 0 0 1-.061-.99l.06-.071.822-.842h-2.199L12 12l3.298 3.376h2.2l-.822-.84a.763.763 0 0 1 0-1.062.721.721 0 0 1 1.036 0l2.073 2.123a.75.75 0 0 1 .06.067l-.06-.067c.029.029.055.06.077.092l.028.042.041.079.032.082.026.104.01.087-.001.103-.01.072-.025.104-.032.083-.041.078-.05.074-.055.06-2.073 2.123a.721.721 0 0 1-1.036 0 .763.763 0 0 1 0-1.061l.821-.842h-2.376l-.064-.002a.722.722 0 0 1-.58-.217l-3.514-3.597-3.513 3.597a.727.727 0 0 1-.422.213l-.096.007H4.733a.742.742 0 0 1-.733-.75c0-.386.283-.703.648-.746l.085-.005h1.895L9.926 12 6.628 8.623H4.733A.742.742 0 0 1 4 7.873c0-.415.328-.75.733-.75h2.199c.194 0 .38.078.518.22l3.513 3.596 3.514-3.597.066-.06.066-.047.076-.042.058-.025.054-.018.085-.019.089-.008h2.526l-.821-.842a.763.763 0 0 1 0-1.061.72.72 0 0 1 .967-.063z"></path>
               </svg>
             </div>
@@ -77,7 +77,7 @@
               </svg>
             </div>
             <div class="playlist-button controls-button" title="Playlist">
-              <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="PlaylistButton__Icon-sc-13w9d8z-1 eNkkcL">
+              <svg viewBox="0 0 24 24" fill="rgb(255, 255, 255)" class="PlaylistButton">
                 <path d="M4.75 16.429c.414 0 .75.351.75.785 0 .434-.336.786-.75.786S4 17.648 4 17.214c0-.434.336-.785.75-.785zm13.5 0c.414 0 .75.351.75.785 0 .434-.336.786-.75.786H8.5c-.414 0-.75-.352-.75-.786 0-.434.336-.785.75-.785zm-13.5-4.715c.414 0 .75.352.75.786 0 .434-.336.786-.75.786S4 12.934 4 12.5c0-.434.336-.786.75-.786zm3.75 0h9.75c.414 0 .75.352.75.786a.775.775 0 0 1-.648.779l-.102.007H8.5c-.414 0-.75-.352-.75-.786 0-.398.282-.727.648-.779l.102-.007h9.75zM18.25 7c.414 0 .75.352.75.786a.775.775 0 0 1-.648.778l-.102.007H8.5c-.414 0-.75-.351-.75-.785 0-.398.282-.727.648-.779L8.5 7h9.75zM4.75 7c.414 0 .75.352.75.786 0 .434-.336.785-.75.785S4 8.22 4 7.786C4 7.352 4.336 7 4.75 7z"></path>
               </svg>
             </div>
