--- a/momentum/index.html
+++ b/momentum/index.html
@@ -157,37 +157,37 @@
             <li>
               <span class="setting-name">Background source</span>
             </li>
-            <li class="slide-toggle">
+            <li class="slide-toggle time-li">
               <span class="setting-name">Time</span>
               <input class="checkbox" type="checkbox" id="time" checked>
               <label class="slider" for="time"></label>
             </li>
-            <li class="slide-toggle">
+            <li class="slide-toggle date-li">
               <span class="setting-name">Date</span>
               <input class="checkbox" type="checkbox" id="date" checked>
               <label class="slider" for="date"></label>
             </li>
-            <li class="slide-toggle">
+            <li class="slide-toggle greeting-li">
               <span class="setting-name">Greeting</span>
               <input class="checkbox" type="checkbox" id="greeting" checked>
               <label class="slider" for="greeting"></label>
             </li>
-            <li class="slide-toggle">
+            <li class="slide-toggle quote-li">
               <span class="setting-name">Quote</span>
               <input class="checkbox" type="checkbox" id="quote" checked>
               <label class="slider" for="quote"></label>
             </li>
-            <li class="slide-toggle">
+            <li class="slide-toggle weather-li">
               <span class="setting-name">Weather</span>
               <input class="checkbox" type="checkbox" id="weather" checked>
               <label class="slider" for="weather"></label>
             </li>
-            <li class="slide-toggle">
+            <li class="slide-toggle audio-li">
               <span class="setting-name">Audioplayer</span>
               <input class="checkbox" type="checkbox" id="player" checked>
               <label class="slider" for="player"></label>
             </li>
-            <li class="slide-toggle">
+            <li class="slide-toggle todolist-li">
               <span class="setting-name">To Do List</span>
               <input class="checkbox" type="checkbox" id="to-do" checked>
               <label class="slider" for="to-do"></label>
