--- a/momentum/index.html
+++ b/momentum/index.html
@@ -154,43 +154,51 @@
                 </div>
               </div>
             </li>
-            <li>
-              <span class="setting-name">Background source</span>
+            <li class="bg">
+              <span class="setting-name">Background</span>
+              <div class="select-bg">
+                <div class="git">
+                  <input class="lang-radio" type="radio" id="git" name="bg" value="git" checked><label class="lang-label" for="git">GitHub</label>
+                </div>
+                <div class="unsplash">
+                  <input class="lang-radio" type="radio" id="unsplash" name="bg" value="git"><label class="lang-label" for="unsplash">Unsplash API</label>
+                </div>
+                <div class="flickr">
+                  <input class="lang-radio" type="radio" id="flickr" name="bg" value="git"><label class="lang-label" for="flickr">Flickr API</label>
+                </div>
+              </div>
+            </li>
+            <li class="tags">
+              <span class="setting-name">Tags</span>
+              <input class="bg-tags" type="text">
             </li>
             <li class="slide-toggle">
               <span class="setting-name">Time</span>
-              <input class="checkbox" type="checkbox" id="time" checked>
-              <label class="slider" for="time"></label>
+              <input class="checkbox" type="checkbox" id="time" checked><label class="slider" for="time"></label>
             </li>
             <li class="slide-toggle">
               <span class="setting-name">Date</span>
-              <input class="checkbox" type="checkbox" id="date" checked>
-              <label class="slider" for="date"></label>
+              <input class="checkbox" type="checkbox" id="date" checked><label class="slider" for="date"></label>
             </li>
             <li class="slide-toggle">
               <span class="setting-name">Greeting</span>
-              <input class="checkbox" type="checkbox" id="greeting" checked>
-              <label class="slider" for="greeting"></label>
+              <input class="checkbox" type="checkbox" id="greeting" checked><label class="slider" for="greeting"></label>
             </li>
             <li class="slide-toggle">
               <span class="setting-name">Quote</span>
-              <input class="checkbox" type="checkbox" id="quote" checked>
-              <label class="slider" for="quote"></label>
+              <input class="checkbox" type="checkbox" id="quote" checked><label class="slider" for="quote"></label>
             </li>
             <li class="slide-toggle">
               <span class="setting-name">Weather</span>
-              <input class="checkbox" type="checkbox" id="weather" checked>
-              <label class="slider" for="weather"></label>
+              <input class="checkbox" type="checkbox" id="weather" checked><label class="slider" for="weather"></label>
             </li>
             <li class="slide-toggle">
               <span class="setting-name">Audioplayer</span>
-              <input class="checkbox" type="checkbox" id="audio" checked>
-              <label class="slider" for="player"></label>
+              <input class="checkbox" type="checkbox" id="audio" checked><label class="slider" for="player"></label>
             </li>
             <li class="slide-toggle">
               <span class="setting-name">To Do List</span>
-              <input class="checkbox" type="checkbox" id="todolist" checked>
-              <label class="slider" for="todolist"></label>
+              <input class="checkbox" type="checkbox" id="todolist" checked><label class="slider" for="todolist"></label>
             </li>
           </ul>
         </div>
