--- a/momentum/index.html
+++ b/momentum/index.html
@@ -214,7 +214,15 @@
         <div class="author"></div>
       </div>
     </div>
-    <div class="todolist">To Do List</div>
+    <div class="todolist">
+      <span class="title">To Do List</span>
+      <div class="todo-container">
+        <ul class="tasks">
+        </ul>
+        <input class="todo-text" type="text">
+        <button class="add-todo">Add</button>
+      </div>
+    </div>
   </footer>
   <script type="module" src="js/script.js"></script>
 </body>
