--- a/codejam/index.html
+++ b/codejam/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="#" rel="shortcut icon" />
   <link rel="stylesheet" href="style.css">
   <title>Codejam</title>
 </head>
@@ -27,9 +28,9 @@
         <div class="stage-container">
           <span class="stage-text done">Первая стадия</span>
           <div class="dots-container">
-            <div class="dot green">0</div>
-            <div class="dot brown">0</div>
-            <div class="dot blue">0</div>
+            <div class="dot green">1</div>
+            <div class="dot brown">2</div>
+            <div class="dot blue">1</div>
           </div>
         </div>
         <div class="stage-container">
@@ -53,5 +54,6 @@
       <div class="last-card" style="background-image: url(./assets/MythicCards/blue/blue1.png);"></div>
     </div>
   </div>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
