feat: add random config by default

--- a/codejam/index.html
+++ b/codejam/index.html
@@ -14,12 +14,12 @@
       <div class="ancient-card " style="background-image: url(./assets/Ancients/Azathoth.png);"></div>
       <div class="ancient-card " style="background-image: url(./assets/Ancients/Cthulthu.png);"></div>
       <div class="ancient-card " style="background-image: url(./assets/Ancients/IogSothoth.png);"></div>
-      <div class="ancient-card active" style="background-image: url(./assets/Ancients/ShubNiggurath.png);"></div>
+      <div class="ancient-card " style="background-image: url(./assets/Ancients/ShubNiggurath.png);"></div>
     </div>
     <div class="difficulty-container">
       <div class="difficulty ">Очень легкий</div>
       <div class="difficulty ">Легкий</div>
-      <div class="difficulty active">Средний</div>
+      <div class="difficulty ">Средний</div>
       <div class="difficulty ">Сложный</div>
       <div class="difficulty ">Очень сложный</div>
     </div>
@@ -28,25 +28,25 @@
         <div class="stage-container">
           <span class="stage-text done">Первая стадия</span>
           <div class="dots-container">
-            <div class="dot green">1</div>
-            <div class="dot brown">2</div>
-            <div class="dot blue">1</div>
+            <div class="dot green"></div>
+            <div class="dot brown"></div>
+            <div class="dot blue"></div>
           </div>
         </div>
         <div class="stage-container">
           <span class="stage-text ">Вторая стадия</span>
           <div class="dots-container">
-            <div class="dot green">3</div>
-            <div class="dot brown">2</div>
-            <div class="dot blue">1</div>
+            <div class="dot green"></div>
+            <div class="dot brown"></div>
+            <div class="dot blue"></div>
           </div>
         </div>
         <div class="stage-container">
           <span class="stage-text ">Третья стадия</span>
           <div class="dots-container">
-            <div class="dot green">2</div>
-            <div class="dot brown">4</div>
-            <div class="dot blue">0</div>
+            <div class="dot green"></div>
+            <div class="dot brown"></div>
+            <div class="dot blue"></div>
           </div>
         </div>
       </div>
