feat: add deck & last card functions

--- a/codejam/index.html
+++ b/codejam/index.html
@@ -50,8 +50,8 @@
           </div>
         </div>
       </div>
+      <div class="last-card"></div>
       <div class="deck" style="background-image: url(./assets/mythicCardBackground.png);"></div>
-      <div class="last-card" style="background-image: url(./assets/MythicCards/blue/blue1.png);"></div>
     </div>
   </div>
   <script type="module" src="./script.js"></script>
