feat: finished algorithm

--- a/codejam/index.html
+++ b/codejam/index.html
@@ -26,7 +26,7 @@
     <div class="deck-container">
       <div class="current-state">
         <div class="stage-container">
-          <span class="stage-text done">Первая стадия</span>
+          <span class="stage-text ">Первая стадия</span>
           <div class="dots-container">
             <div class="dot green"></div>
             <div class="dot brown"></div>
