fix: final tune css

--- a/codejam/index.html
+++ b/codejam/index.html
@@ -16,14 +16,17 @@
       <div class="ancient-card " style="background-image: url(./assets/Ancients/IogSothoth.png);"></div>
       <div class="ancient-card " style="background-image: url(./assets/Ancients/ShubNiggurath.png);"></div>
     </div>
-    <div class="difficulty-container">
-      <div class="difficulty ">Очень легкий</div>
-      <div class="difficulty ">Легкий</div>
-      <div class="difficulty ">Средний</div>
-      <div class="difficulty ">Сложный</div>
-      <div class="difficulty ">Очень сложный</div>
+    <div class="setting-container">
+      <div class="difficulty-container">
+        <div class="difficulty ">Очень легкий</div>
+        <div class="difficulty ">Легкий</div>
+        <div class="difficulty ">Средний</div>
+        <div class="difficulty ">Сложный</div>
+        <div class="difficulty ">Очень сложный</div>
+      </div>
+      <div class="selected-ancient"></div>
     </div>
-    <div class="deck-container">
+    <div class="progress-container">
       <div class="current-state">
         <div class="stage-container">
           <span class="stage-text ">Первая стадия</span>
@@ -50,8 +53,10 @@
           </div>
         </div>
       </div>
-      <div class="last-card"></div>
-      <div class="deck" style="background-image: url(./assets/mythicCardBackground.png);"></div>
+      <div class="deck-container">
+        <div class="last-card"></div>
+        <div class="deck" style="background-image: url(./assets/mythicCardBackground.png);"></div>
+      </div>
     </div>
   </div>
   <script type="module" src="./script.js"></script>
